# pyshim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  install.py  pyproject.toml  pyshim.code-workspace  pyshim.sln  setup.bat
.github/: allowed-secrets.json  copilot-instructions.md
.github/actions/sign-installers/: action.yml
.github/workflows/: build-installer.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  FAQ.md  INSTALLATION.md
examples/: .python-version  profile.ps1  python.env  python@MyService.env
installer/Pyshim.Setup/: EmbeddedPayload.cs  InstallerOptions.cs  MainForm.cs  Program.cs  Pyshim.Setup.csproj
prompt/: Make-PromptCodeReference.ps1  Prompt-Code-Reference.html  Prompt-Code-Reference.md
pyshim/: __init__.py  cli.py  config.py  context.py  shim.py
pyshim/templates/: pip.bat  py.bat  python.bat
tests/: smoke.ps1  test_config.py  test_context.py  test_shim.py
tools/: Get-AllProfileData.ps1  Install-CondaPythons.ps1  Install-Pyshim.template.ps1  New-PyshimInstaller.ps1  New-PyshimSetupPayload.ps1  Refresh-CondaPythons.ps1  Remove-CondaPythons.ps1
