[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshim"
version = "0.1.0"
description = "A deterministic, context-aware Python shim for Windows"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "pyshim contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
pyshim = "pyshim.cli:main"
python-shim = "pyshim.shim:main_python"
pip-shim = "pyshim.shim:main_pip"
py-shim = "pyshim.shim:main_py"

[project.urls]
Homepage = "https://github.com/shruggietech/pyshim"
Repository = "https://github.com/shruggietech/pyshim"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyshim*"]
